--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://postgres-productdb:5432/cartdb
+server.port = 8082
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=user
+spring.datasource.password=password
 spring.application.name=cart-service
+spring.cloud.openfeign.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.liquibase.change-log=classpath:liquibase-changelog/liquibase-changelog.yaml
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.web.resources.add-mappings=false
+spring.cloud.openfeign.client.config.product-service.url=http://product-service:8080
